<resources>
    <string name="app_name">weibo</string>
    <string name="sign_out">sign out</string>
    <string name="find_user">find user</string>
    <string name="send_weibo">send weibo</string>
    <string name="wake_weibo">wake weibo</string>
    <string name="first_page">首页</string>
    <string name="image">image</string>
    <string name="me">我</string>
    <string name="from">来自</string>
    <string name="comment">评 论</string>
    <string name="weibo">微博</string>
    <string name="weibo_English">weibo</string>
    <string name="add_account">添加账号</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="register_hint">手机号/邮箱</string>
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sign_in">登  录</string>
    <string name="register_oauth">注 册 并 授 权</string>
    <string name="confirm_password">确认密码</string>
    <string name="back">back</string>
    <string name="share_text">分享文字</string>
    <string name="share_img">分享图片</string>
    <string name="share_video">分享视频</string>
    <string name="location">所在地</string>
    <string name="sex">性别</string>
    <string name="time">注册时间</string>
    <string name="my_comments">我的评论</string>

    <string name="oauth">授 权</string>
    <string name="mention_me">提到我</string>
    <string name="send_comment">发 送 评 论</string>
    <string name="weibo_content">微博正文</string>
    <string name="exit_account">退 出 当 前 账 号</string>
    <string name="comment_hint">请输入评论（不超过140字）</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="account_manager">账号管理</string>
    <string name="save_image">保 存 图 片</string>

</resources>
